// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`видео cars 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": true,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars",
      },
    ]
  }
/>
`;

exports[`видео cars с кучей всего 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304&tech_param_id=21397560",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": true,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&category=cars&complectation_id=21397498_21397672_21397560&configuration_id=21397498&mark=mitsubishi&model=outlander&super_gen=21397304",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=mitsubishi&model=outlander&super_gen=21397304",
      },
    ]
  }
/>
`;

exports[`видео cars с маркой 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&mark=bmw&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": true,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=bmw",
      },
    ]
  }
/>
`;

exports[`каталог cars 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": true,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars",
      },
    ]
  }
/>
`;

exports[`каталог cars с кучей всего 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&mark=bmw&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": true,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=bmw",
      },
    ]
  }
/>
`;

exports[`каталог cars с маркой 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&mark=bmw&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": true,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&category=cars&mark=bmw",
      },
      Object {
        "alias": "reviews",
        "isActive": false,
        "isSPA": true,
        "link": "link/reviews-listing/?from=top_menu_secondline&parent_category=cars&category=cars&mark=bmw",
      },
    ]
  }
/>
`;

exports[`отзывы cars 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=cars&geo_id=213&tech_param_id=",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&category=cars&geo_id=213&parent_category=cars",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&category=cars&geo_id=213",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=cars",
      },
    ]
  }
/>
`;

exports[`отзывы cars с маркой 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&geo_id=213&mark=audi&tech_param_id=&category=cars",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&geo_id=213&mark=audi&parent_category=cars",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&geo_id=213&mark=audi",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&geo_id=213&mark=audi&parent_category=cars",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=cars",
      },
    ]
  }
/>
`;

exports[`отзывы cars с маркой и моделью 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&geo_id=213&mark=audi&model=a3&tech_param_id=&category=cars",
      },
      Object {
        "alias": "catalog",
        "isActive": false,
        "isSPA": true,
        "link": "link/catalog/?from=top_menu_secondline&geo_id=213&mark=audi&model=a3&parent_category=cars",
      },
      Object {
        "alias": "garage",
        "isActive": false,
        "isSPA": true,
        "link": "link/garage/?from=top_menu_secondline",
      },
      Object {
        "alias": "video",
        "isActive": false,
        "isSPA": true,
        "link": "link/video/?from=top_menu_secondline&geo_id=213&mark=audi&model=a3",
      },
      Object {
        "alias": "stats",
        "isActive": false,
        "isSPA": true,
        "link": "link/stats/?from=top_menu_secondline&geo_id=213&mark=audi&model=a3&parent_category=cars",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=cars",
      },
    ]
  }
/>
`;

exports[`отзывы moto 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&tech_param_id=&category=motorcycle",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=moto",
      },
    ]
  }
/>
`;

exports[`отзывы moto scooters 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=scooters&tech_param_id=",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=moto",
      },
    ]
  }
/>
`;

exports[`отзывы moto scooters марка модель 1`] = `
<AppTabs
  tabs={
    Array [
      Object {
        "alias": "listing",
        "isActive": false,
        "link": "link/listing/?from=top_menu_secondline&category=scooters&mark=bmw&model=c650&tech_param_id=",
      },
      Object {
        "alias": "reviews",
        "isActive": true,
        "isSPA": true,
        "link": "link/reviews-index/?from=top_menu_secondline&parent_category=moto",
      },
    ]
  }
/>
`;
